# python-project-52

./: .gitignore  =0.5.0  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python.yml
task_manager/: forms.py  models.py  settings.py  urls.py  views.py
task_manager/apps/labels/: models.py  urls.py  views.py
task_manager/apps/labels/migrations/: 0001_initial.py  0002_alter_label_color.py
task_manager/apps/statuses/: forms.py  models.py  urls.py  views.py
task_manager/apps/statuses/migrations/: 0001_initial.py
task_manager/apps/tags/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/apps/tags/migrations/: 0001_initial.py
task_manager/apps/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/apps/tasks/migrations/: 0001_initial.py  0002_task_tags.py  0003_alter_task_description_alter_task_name_and_more.py  0004_task_executor.py  0005_remove_task_performer.py  (+1 more)
task_manager/apps/users/: forms.py  urls.py  views.py
task_manager/locale/en/LC_MESSAGES/: django.mo  (+1 more)
task_manager/templates/: base.html  index.html  login.html  task.html
task_manager/templates/crud/: create.html  delete.html  list.html  update.html
task_manager/templates/statuses/: index.html
task_manager/templates/tasks/: task.html
task_manager/templates/users/: delete.html  index.html  signup.html  update.html
task_manager/users/: forms.py  urls.py  views.py
task_manager/utils/: text.py
tests/: conftest.py  fixtures.py  test_index.py  test_labels.py  test_statuses.py  test_tags.py  test_tasks.py  test_users.py
(+2 files in other folders)
